[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/button_unpressed.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://Assets/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttonPressSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/PotionUnpressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/PotionSound.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/PotionPressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Magero.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/StarUnpressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/StarPressed.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.564706, 0.835294, 0.980392, 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Background" type="Panel" parent="Canvas"]
margin_right = 321.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )

[node name="PotionOneCost" type="Label" parent="Canvas"]
margin_left = 220.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )

[node name="PotionOne" type="TextureButton" parent="Canvas"]
margin_left = 266.0
margin_top = 47.0
margin_right = 276.0
margin_bottom = 63.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )

[node name="ShopLabel" type="Label" parent="Canvas"]
margin_left = 252.0
margin_top = 28.0
margin_right = 292.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "SHOP"

[node name="ButtonPressSound" type="AudioStreamPlayer" parent="Canvas"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="PotionSound" type="AudioStreamPlayer" parent="Canvas"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="NumberOfPoints" type="RichTextLabel" parent="Canvas"]
margin_left = 14.0
margin_top = 18.0
margin_right = 160.0
margin_bottom = 58.0
custom_fonts/mono_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )

[node name="RedButton" type="TextureButton" parent="Canvas"]
margin_left = 110.0
margin_top = 45.0
margin_right = 210.0
margin_bottom = 145.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="StarButton" type="TextureButton" parent="Canvas"]
margin_left = 264.0
margin_top = 85.0
margin_right = 280.0
margin_bottom = 101.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="plusPointsAmt" type="RichTextLabel" parent="Canvas"]
margin_left = 8.0
margin_top = 61.0
margin_right = 48.0
margin_bottom = 101.0

[node name="StarCost" type="RichTextLabel" parent="Canvas"]
margin_left = 211.0
margin_top = 109.0
margin_right = 313.0
margin_bottom = 149.0
custom_fonts/mono_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 7 )

[node name="StarTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="pressed" from="Canvas/PotionOne" to="." method="_on_PotionOne_pressed"]
[connection signal="pressed" from="Canvas/RedButton" to="." method="_on_RedButton_pressed"]
[connection signal="pressed" from="Canvas/StarButton" to="." method="_on_StarButton_pressed"]
[connection signal="timeout" from="StarTimer" to="." method="_on_StarTimer_timeout"]
